global using System.Globalization;
global using System.Text;
global using Ardalis.GuardClauses;
global using Ardalis.Result.AspNetCore;
global using FastEndpoints;
global using FastEndpoints.Swagger;
global using Makc.Dummy.Shared.Apps.WebApp.App.Middlewares;
global using Makc.Dummy.Shared.Core.App;
global using Makc.Dummy.Shared.Core.App.Config.Options;
global using Makc.Dummy.Shared.Core.App.Config.Options.Enums;
global using Makc.Dummy.Shared.Core.App.Event.Payloads;
global using Makc.Dummy.Shared.DomainUseCases.Query.Sections;
global using Makc.Dummy.Shared.Infrastructure.Core.App;
global using Makc.Dummy.Shared.Infrastructure.Core.App.Logger.Funcs;
global using Makc.Dummy.Shared.Infrastructure.CoreForOpenTelemetry.App;
global using Makc.Dummy.Shared.Infrastructure.CoreForOpenTelemetryInWeb.App;
global using Makc.Dummy.Writer.Apps.WebApp.App;
global using Makc.Dummy.Writer.Apps.WebApp.App.Config;
global using Makc.Dummy.Writer.Apps.WebApp.App.Config.Options.Sections;
global using Makc.Dummy.Writer.Apps.WebApp.App.Config.Options.Sections.Domain.App;
global using Makc.Dummy.Writer.Apps.WebApp.AppOutgoingEvent.Endpoints.Create;
global using Makc.Dummy.Writer.Apps.WebApp.AppOutgoingEvent.Endpoints.GetList;
global using Makc.Dummy.Writer.Apps.WebApp.AppOutgoingEvent.Endpoints.Update;
global using Makc.Dummy.Writer.Apps.WebApp.AppOutgoingEventPayload.Endpoints.Create;
global using Makc.Dummy.Writer.Apps.WebApp.AppOutgoingEventPayload.Endpoints.GetList;
global using Makc.Dummy.Writer.Apps.WebApp.AppOutgoingEventPayload.Endpoints.Update;
global using Makc.Dummy.Writer.Apps.WebApp.DummyItem.Endpoints.Create;
global using Makc.Dummy.Writer.Apps.WebApp.DummyItem.Endpoints.GetList;
global using Makc.Dummy.Writer.Apps.WebApp.DummyItem.Endpoints.Update;
global using Makc.Dummy.Writer.DomainModel.App;
global using Makc.Dummy.Writer.DomainModel.App.Db.SQL;
global using Makc.Dummy.Writer.DomainUseCases.App;
global using Makc.Dummy.Writer.DomainUseCases.AppOutgoingEvent;
global using Makc.Dummy.Writer.DomainUseCases.AppOutgoingEvent.Actions.Delete;
global using Makc.Dummy.Writer.DomainUseCases.AppOutgoingEvent.Actions.Get;
global using Makc.Dummy.Writer.DomainUseCases.AppOutgoingEvent.Actions.GetList;
global using Makc.Dummy.Writer.DomainUseCases.AppOutgoingEvent.Actions.Save;
global using Makc.Dummy.Writer.DomainUseCases.AppOutgoingEvent.DTOs;
global using Makc.Dummy.Writer.DomainUseCases.AppOutgoingEvent.Queries;
global using Makc.Dummy.Writer.DomainUseCases.AppOutgoingEvent.Query.Sections;
global using Makc.Dummy.Writer.DomainUseCases.AppOutgoingEventPayload;
global using Makc.Dummy.Writer.DomainUseCases.AppOutgoingEventPayload.Actions.Delete;
global using Makc.Dummy.Writer.DomainUseCases.AppOutgoingEventPayload.Actions.Get;
global using Makc.Dummy.Writer.DomainUseCases.AppOutgoingEventPayload.Actions.GetList;
global using Makc.Dummy.Writer.DomainUseCases.AppOutgoingEventPayload.Actions.Save;
global using Makc.Dummy.Writer.DomainUseCases.AppOutgoingEventPayload.DTOs;
global using Makc.Dummy.Writer.DomainUseCases.AppOutgoingEventPayload.Queries;
global using Makc.Dummy.Writer.DomainUseCases.AppOutgoingEventPayload.Query.Sections;
global using Makc.Dummy.Writer.DomainUseCases.Auth.Actions.Login;
global using Makc.Dummy.Writer.DomainUseCases.Auth.DTOs;
global using Makc.Dummy.Writer.DomainUseCases.DummyItem;
global using Makc.Dummy.Writer.DomainUseCases.DummyItem.Actions.Delete;
global using Makc.Dummy.Writer.DomainUseCases.DummyItem.Actions.Get;
global using Makc.Dummy.Writer.DomainUseCases.DummyItem.Actions.GetList;
global using Makc.Dummy.Writer.DomainUseCases.DummyItem.Actions.Save;
global using Makc.Dummy.Writer.DomainUseCases.DummyItem.DTOs;
global using Makc.Dummy.Writer.DomainUseCases.DummyItem.Queries;
global using Makc.Dummy.Writer.Infrastructure.Core.App;
global using Makc.Dummy.Writer.Infrastructure.Dapper.App;
global using Makc.Dummy.Writer.Infrastructure.DapperForMSSQLServer.App;
global using Makc.Dummy.Writer.Infrastructure.DapperForPostgreSQL.App;
global using Makc.Dummy.Writer.Infrastructure.EntityFramework.App;
global using Makc.Dummy.Writer.Infrastructure.EntityFrameworkForMSSQLServer.App;
global using Makc.Dummy.Writer.Infrastructure.EntityFrameworkForPostgreSQL.App;
global using Makc.Dummy.Writer.Infrastructure.Grpc.App;
global using Makc.Dummy.Writer.Infrastructure.MSSQLServer.App;
global using Makc.Dummy.Writer.Infrastructure.PostgreSQL.App;
global using MediatR;
global using Microsoft.AspNetCore.Authentication.JwtBearer;
global using Microsoft.Extensions.Options;
global using Microsoft.IdentityModel.Logging;
global using Microsoft.IdentityModel.Tokens;
