global using Google.Protobuf.WellKnownTypes;
global using Grpc.Core;
global using Makc.Dummy.Shared.Core.App.Event;
global using Makc.Dummy.Shared.Infrastructure.Grpc;
global using Makc.Dummy.Writer.DomainUseCases.AppOutgoingEvent.Actions.Create;
global using Makc.Dummy.Writer.DomainUseCases.AppOutgoingEvent.Actions.Delete;
global using Makc.Dummy.Writer.DomainUseCases.AppOutgoingEvent.Actions.Get;
global using Makc.Dummy.Writer.DomainUseCases.AppOutgoingEvent.Actions.GetList;
global using Makc.Dummy.Writer.DomainUseCases.AppOutgoingEvent.Actions.Update;
global using Makc.Dummy.Writer.DomainUseCases.AppOutgoingEvent.DTOs;
global using Makc.Dummy.Writer.DomainUseCases.AppOutgoingEvent.Queries;
global using Makc.Dummy.Writer.DomainUseCases.AppOutgoingEventPayload.Actions.Create;
global using Makc.Dummy.Writer.DomainUseCases.AppOutgoingEventPayload.Actions.Delete;
global using Makc.Dummy.Writer.DomainUseCases.AppOutgoingEventPayload.Actions.Get;
global using Makc.Dummy.Writer.DomainUseCases.AppOutgoingEventPayload.Actions.GetList;
global using Makc.Dummy.Writer.DomainUseCases.AppOutgoingEventPayload.Actions.Update;
global using Makc.Dummy.Writer.DomainUseCases.AppOutgoingEventPayload.DTOs;
global using Makc.Dummy.Writer.DomainUseCases.AppOutgoingEventPayload.Queries;
global using Makc.Dummy.Writer.DomainUseCases.Auth.Actions.Login;
global using Makc.Dummy.Writer.DomainUseCases.Auth.DTOs;
global using Makc.Dummy.Writer.DomainUseCases.DummyItem.Actions.Create;
global using Makc.Dummy.Writer.DomainUseCases.DummyItem.Actions.Delete;
global using Makc.Dummy.Writer.DomainUseCases.DummyItem.Actions.Get;
global using Makc.Dummy.Writer.DomainUseCases.DummyItem.Actions.GetList;
global using Makc.Dummy.Writer.DomainUseCases.DummyItem.Actions.Update;
global using Makc.Dummy.Writer.DomainUseCases.DummyItem.DTOs;
global using Makc.Dummy.Writer.DomainUseCases.DummyItem.Queries;
global using Makc.Dummy.Writer.Infrastructure.Grpc.AppOutgoingEvent;
global using Makc.Dummy.Writer.Infrastructure.Grpc.AppOutgoingEventPayload;
global using Makc.Dummy.Writer.Infrastructure.Grpc.Auth;
global using Makc.Dummy.Writer.Infrastructure.Grpc.DummyItem;
global using MediatR;
global using Microsoft.AspNetCore.Builder;
global using Microsoft.Extensions.Configuration;
global using Microsoft.Extensions.DependencyInjection;
global using Microsoft.Extensions.Logging;
global using AppOutgoingEventPayloadServiceBase = Makc.Dummy.Writer.Infrastructure.Grpc.AppOutgoingEventPayload.AppOutgoingEventPayload.AppOutgoingEventPayloadBase;
global using AppOutgoingEventServiceBase = Makc.Dummy.Writer.Infrastructure.Grpc.AppOutgoingEvent.AppOutgoingEvent.AppOutgoingEventBase;
global using AuthServiceBase = Makc.Dummy.Writer.Infrastructure.Grpc.Auth.Auth.AuthBase;
global using DummyItemServiceBase = Makc.Dummy.Writer.Infrastructure.Grpc.DummyItem.DummyItem.DummyItemBase;
